--- a/css/wooster.css
+++ b/css/wooster.css
@@ -697,7 +697,7 @@ header .links ul li:not(:last-child) a {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    left: 18px;
+    left: 20px;
 }
 .subscribe form input[type="email"] {
     border: 1px solid white;
@@ -711,6 +711,7 @@ header .links ul li:not(:last-child) a {
     color: white;
     text-transform: uppercase;
     font-weight: 600;
+    font-size: 13px;
 }
 .subscribe form input[type="submit"] {
     width: 130px;
@@ -718,7 +719,8 @@ header .links ul li:not(:last-child) a {
     color:black;
     border: 1px solid white;
     text-transform: uppercase;
-    font-weight: 600;
+    font-weight: 700;
+    font-size: 13px;
 }
 /* End Subscribe  */
 /* Start Contact  */
