--- a/css/wooster.css
+++ b/css/wooster.css
@@ -240,6 +240,9 @@ header .links ul li:not(:last-child) a {
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
+    position: relative;
+    top: 50%;
 }
 @media (max-width: 767px) {
     .foot-landing .container {
@@ -426,6 +429,9 @@ header .links ul li:not(:last-child) a {
     width: 100%;
     height: 100%;
     background-color: rgb(0 0 0 / 60%);
+}
+.video .container {
+    text-align: center;
 }
 .video .container .content {
     position: relative;
