Upload Third Design

--- a/css/wooster.css
+++ b/css/wooster.css
@@ -234,7 +234,6 @@ header .links ul li:not(:last-child) a {
 .foot-landing {
     position: relative;
     background-color: black;
-    /* min-height: 15vh; */
 }
 .foot-landing .container {
     display: flex;
@@ -411,13 +410,13 @@ header .links ul li:not(:last-child) a {
     top: -120px;
     height: 50vh;
     background-position: center;
-    display: block;
 }
 @media (max-width: 767px) {
     .video {
         position: relative;
         top: 50px;
         margin-top: 30px;
+        height: 25vh;
     }
 }
 .video::before {
