--- a/css/wooster.css
+++ b/css/wooster.css
@@ -416,7 +416,6 @@ header .links ul li:not(:last-child) a {
         position: relative;
         top: 50px;
         margin-top: 30px;
-        height: 25vh;
     }
 }
 .video::before {
@@ -435,17 +434,18 @@ header .links ul li:not(:last-child) a {
     position: relative;
     color: white;
     text-align: center;
-    top: 150px;
+    top: 50%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    transform: translateY(130%);
 }
 .video .content h4 {
     font-weight: 600;
     font-size: 20px;
     text-transform: uppercase;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
 }
 .video .content .icon {
     width: 50px;
